Fixes contrast

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-	background: rgb(0, 100, 160);
+	background: #0077CC;
 	margin: 2em auto 2em 2em;
 	max-width: 44em;
 	padding: 0;
